Fix Item Alignment

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -57,6 +57,8 @@ body, h1, h2, h3, h4, h5, p, a, ul, li, button {
   font-weight: 600;
   color: #303030;
   text-align: center;
+  margin: 1em;
+
 }
 
 .h5-main {
@@ -170,7 +172,7 @@ a:hover {
   font-weight: 600;
   min-height: 50px;
   min-width: 240px;
-  margin-top: 45px;
+  margin-top: 1em;
   border-radius: 26px;
   border: 2px solid #2b80ff;
   background-color: #ffffff;
